# DAIR3-Workshop

./: .env.example  .gitignore  README.md  VERSION.txt  env_loader.py  pyproject.toml
.ipython/profile_default/startup/: 00-load-project-env.py
data_challenge/: 2026DAIR3_DataChall_Pre-reqs.tex  LLM.tex
resources/unit_3/: birthweight.ipynb  unit3-slides.typ
resources/unit_4/: 01-foundations-of-predictive-modeling.ipynb  setup.py
resources/unit_6/: birthweight_meta.ipynb  unit6-slides.typ
resources/unit_7/FOO/: agentClaude.py  agentGPTGUI.py  agentGoogleGUI.py  agentGroq.py  cls_foo.py  cls_ollama.py  cls_provider_catalog.py  config.json  file_loader.py  providers.json  widgets_common.py
resources/unit_7/FOO/chats/: Claudette.json  Claudius.json  Gabriella.json  Gerardo.json  Hermione.json
resources/unit_7/FOO/fine_tune_demos/: README.md
resources/unit_7/FOO/fine_tune_demos/bibliography_reformatter/: assemble_dataset.py  eval.jsonl  evaluate.py  submit_finetune.py  train.jsonl
resources/unit_7/FOO/prototypes/: Agent.py  ClaudeChatUL.py  ClaudeGUI.py  ClaudeQA.py  ClaudeUUID.py  README.md  agentGPT.py  agentGoogle.py  agentGroq.py  editJSON.py  generateSummaries.py  grant_review.py  multillm.py
runs/run_352d2779b219459d9f73316f6545ef45/: manifest.json  trace.jsonl
runs/run_56845f9be18b49f6accc96831f54001a/: manifest.json  trace.jsonl
runs/run_e0ff4a29e51a4845b9b43c4883dc644b/: manifest.json
runs/run_e7b004681f284cda81f8069474e9959a/: manifest.json
scripts/: install_venv_env_hook.py
(+5 files in other folders)
