[project]
name = "DAIR3"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy >=1.26",
    "pandas >=2.2",
    "matplotlib >=3.9",
    "scipy >=1.13",
    "jupyter >=1.1",
    "ipykernel >=6.29",
    "statsmodels >=0.14",
    "patsy >=0.5",
    "openai >=1.0",
    "langchain >=0.1",
]
