[project]
name = "DAIR3"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy >=1.26",
    "pandas >=2.2",
    "matplotlib >=3.9",
    "scipy >=1.13",
    "jupyter >=1.1",
    "ipykernel >=6.29",
    "statsmodels >=0.14",
    "patsy >=0.5",
    "openai >=1.0",
    "langchain >=0.1",
    "python-dotenv>=1.2.2",
    "anthropic>=0.103.0",
    "google-genai>=2.4.0",
    "pyqt5>=5.15.11",
    "pypdf2>=3.0.1",
    "langchain-groq>=1.1.2",
    "sumy>=0.12.0",
    "nltk>=3.9.4",
    "langchain-classic>=1.0.7",
    "langchain-core>=1.4.0",
    "scikit-learn>=1.5",
    "plotly>=5.24",
    "qtpy>=2.4",
    "requests>=2.32",
    "tqdm>=4.66",
]
